Bug 1613606 - Bonus cleanup of IPC::Principals r=nika

All of these call sites were unnecessarily converting nsIPrincipal* => IPC::Principal => nsIPrincipal*.

Differential Revision: https://phabricator.services.mozilla.com/D62327