netwerk/protocol/http/nsHttpHandler.cpp
@@ -2389,8 +2389,7 @@ nsresult nsHttpHandler::SpeculativeConnectInternal(
   if (IsNeckoChild()) {
     ipc::URIParams params;
     SerializeURI(aURI, params);
-    gNeckoChild->SendSpeculativeConnect(params, IPC::Principal(aPrincipal),
-                                        anonymous);
+    gNeckoChild->SendSpeculativeConnect(params, aPrincipal, anonymous);
     return NS_OK;
   }
 
