widget/nsDragServiceProxy.cpp
@@ -72,7 +72,7 @@ nsresult nsDragServiceProxy::InvokeDragSessionImpl(
 
         mozilla::Unused << child->SendInvokeDragSession(
             dataTransfers, aActionType, Some(std::move(surfaceData)), stride,
-            dataSurface->GetFormat(), dragRect, IPC::Principal(principal), csp);
+            dataSurface->GetFormat(), dragRect, principal, csp);
         StartDragSession();
         return NS_OK;
       }
@@ -81,7 +81,7 @@ nsresult nsDragServiceProxy::InvokeDragSessionImpl(
 
   mozilla::Unused << child->SendInvokeDragSession(
       dataTransfers, aActionType, Nothing(), 0, static_cast<SurfaceFormat>(0),
-      dragRect, IPC::Principal(principal), csp);
+      dragRect, principal, csp);
   StartDragSession();
   return NS_OK;
 }
